updating names...etc

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@ say100R {
 <!endif?-->
 </head>
 <body>
-<div id="wrapper">
+<div class="container">
 
 	<header>
     <h1>Header</h1>
 	</header><!-- end header -->
 
-	<section id="content-main">
+	<section class="content-main">
     <h1>Main Content</h1>
 	</section><!-- end content-main -->
 
@@ -44,7 +44,7 @@ say100R {
   <h1>Footer</h1>	
 	</footer><!-- end footer -->
 
-</div><!-- end wrapper -->
+</div><!-- end container -->
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 </body>
 </html>
